# transcribe-api

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: main.yml
tests/: test_additional_services.py  test_config.py  test_services.py  test_settings.py
transcribe/: api.py  config.py  main.py  routers.py  services.py  settings.py  transcription.py
