[tool.poetry]
name = "transcribe"
version = "0.1.0"
description = ""
authors = ["Michael Bastos <bastosmichael@gmail.com>"]
readme = "README.md"
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.125.0"
uvicorn = "^0.44.0"
boto3 = "^1.21.0"
pydantic = "^1.9.0"
python-multipart = "^0.0.24"
requests = "^2.33.1"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
black = "^26.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
httpx = "^0.28.1"
pytest-asyncio = "^1.3.0"

[tool.poetry.scripts]
transcribe = "transcribe.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
